--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -252,11 +252,11 @@
 			
 				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
 
-				<br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2 - 4 years of age';">
+				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2 - 4 years of age';">
 
-				<br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 4 years of age';">
+				<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 4 years of age';">
 			
-				<br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
+				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 		</div>
 	</div>												       
@@ -282,11 +282,11 @@
 			
 				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
 
-				<br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2 - 4 years of age';">
+				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2 - 4 years of age';">
 
-				<br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 4 years of age';">
+				<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 4 years of age';">
 			
-				<br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
+				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 		</div>
 	</div>	
@@ -313,18 +313,18 @@
 		
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
-			<br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 			
 			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
 			
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<p><b>Distal epiphysis</b></p>
+			<br><br><p><b>Distal epiphysis</b></p>
 		
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
-			<br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
 			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
 			
@@ -358,14 +358,14 @@
 					
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
-			<br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
 			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
 			
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<p><b>Distal epiphysis - styloid</b></p>
+			<br><br><p><b>Distal epiphysis - styloid</b></p>
 		
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
@@ -404,17 +404,19 @@
 
 			<br><br><input type="button" value="Lunate" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
 			
-			<br><input type="button" value="Triquetral" onclick="document.getElementById('age-range').value='_';">
+			<br><br><input type="button" value="Triquetral" onclick="document.getElementById('age-range').value='_';">
 			
-			<br><input type="button" value="Pisiform" onclick="document.getElementById('age-range').value='Less than 11 (females) or 13 (males) years of age';">
+			<br><br><input type="button" value="Pisiform" onclick="document.getElementById('age-range').value='Less than 11 (females) or 13 (males) years of age';">
 			
-			<br><input type="button" value="Trapezium" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
+			<br><br><input type="button" value="Trapezium" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
 			
-			<br><input type="button" value="Trapezoid" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
+			<br><br><input type="button" value="Trapezoid" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
 			
-			<br><input type="button" value="Capitate" onclick="document.getElementById('age-range').value='_';">
+			<br><br><input type="button" value="Capitate" onclick="document.getElementById('age-range').value='_';">
 
-			<br><input type="button" value="Hamate" onclick="document.getElementById('age-range').value='_';">
+			<br><br><input type="button" value="Hamate" onclick="document.getElementById('age-range').value='_';">
+			
+			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 
 			<br>
 		</div>
@@ -444,15 +446,15 @@
 
 			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
 			
-			<br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='_';">
+			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='_';">
 			
-			<br><p><b>Fusion of heads to metacarpals 2-5</b></p>
+			<br><br><p><b>Fusion of heads to metacarpals 2-5</b></p>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 11 (females) or 13 (males) years of age';">
 			
-			<br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
+			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
 			
-			<br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
+			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
 			
 			<br>
 		</div>
