--- a/skull.html
+++ b/skull.html
@@ -219,7 +219,7 @@
 		
 	<div class="col-md-1">
 		<div class="fixed">
-			<h5>Estimated Age Range:<input type="text" id="age-range" value="" size=33></h5>
+			<br><br><br><br><br><br><h5>Estimated Age Range:<input type="text" id="age-range" value="" size=33></h5>
 		</div>
 	</div>			
 </section>
