--- a/skull.html
+++ b/skull.html
@@ -85,7 +85,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">The Skulls
+                <h1 class="page-header">The Skull
                     <small>Fusion of cranial and mandibular elements</small>
                 </h1>
             </div>
