--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -89,7 +89,6 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Lower Limbs
-                    <small>The Digital Age Estimator of Subadult Skeletons</small>
                 </h1>
             </div>
         </div>
@@ -182,7 +181,7 @@
 
              <div class="col-md-3">
 		    <div class="description">
-                <h2>Bones of the thorax</h2>
+                <h2>Bones of the lower limbs</h2>
                     <p>The bones of the thorax used for juvenile aging in this project are:<p>
                    	 <ul>
 			    <li><a href="#femur1">Femur</a></li>
