--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -371,6 +371,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h2><a name="feet1">Feet</a></h2>
+			<h2>Carpals</h2>
 			<p>The sphenoid is another bone with multiple ossification centers that appear in fetal life.  Although there are at least five centers that ossify in utero, fusion of some of these occurs before birth (CITATIONS).</p>
 			<p>By birth some of them have already fused and normally three are present: (1) the body and lesser wings and (2) a right and a left greater wing fused to the pterygoid plates (CITATIONS).</p>
 		</div>
