--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -165,12 +165,10 @@
                 <h2>Bones of the upper limbs</h2>
                     <p>The bones of the thorax used for juvenile aging in this project are:<p>
                    	 <ul>
-			    <li><a href="#clavicle1">Clavicle</a></li>
-			    <li><a href="#scapula1">Scapula</a></li>
-			    <li><a href="#humerus1">Humerus</a></li>
-			    <li><a href="#radius1">Radius</a></li>
-			    <li><a href="#ulna1">Ulna</a></li>
-			    <li><a href="#hands1">Hands</a></li>
+			    <li><a href="#ilium1">Ilium</a></li>
+			    <li><a href="#ischium1">Ischium</a></li>
+			    <li><a href="#pubis1">Pubis</a></li>
+			    <li><a href="#sacrum1">Sacrum</a></li>
                     	</ul> 
 		    <ol>
                     <li>Compare the bone/element you have to the quick description of aging methods provided for that specific bone.</li>
@@ -190,7 +188,7 @@
 	    
 <section class="container"> 
 	<div class="col-lg-4">
-		<img src="img/pics/clavicle.png" alt="Clavicle" style="width:100%; height:100%;">
+		<img src="img/pics/clavicle.png" alt="Ischium" style="width:100%; height:100%;">
 		<h6>Subadult clavicle.</h6>
         </div>
             
