--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -160,7 +160,7 @@
 </div>
 			
 
-           <div class="col-md-3">
+           <div class="col-lg-3">
 		    <div class="description">
                 <h2>Bones of the upper limbs</h2>
                     <p>The bones of the thorax used for juvenile aging in this project are:<p>
@@ -177,7 +177,7 @@
 		    </div>
 		</div>
 		
-	<div class="col-md-1">
+	<div class="col-lg-1">
 		<div class="fixed">
 			<h5>Estimated Age Range:<input type="text" id="age-range" value="" size=33></h5>
 		</div>
