--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -91,7 +91,6 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Pelvic Girdle
-                    <small>The Digital Age Estimator of Subadult Skeletons</small>
                 </h1>
             </div>
         </div>
@@ -104,7 +103,7 @@
 		<div id="col-lg-7">
 			<?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Inkscape (http://www.inkscape.org/) -->
-<svg width="70%" height="70%" version="1.1" viewBox="0 0 122.95835 100.85069" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
+<svg width="50%" height="50%" version="1.1" viewBox="0 0 122.95835 100.85069" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
  <metadata>
   <rdf:RDF>
    <cc:Work rdf:about="">
@@ -158,9 +157,7 @@
  </g>
 </svg>
 </div>
-			
-
-           <div class="col-lg-3">
+           <div class="col-md-3">
 		    <div class="description">
                 <h2>Bones of the pelvic girdle</h2>
                     <p>The bones of the pelvic girdle used for juvenile aging in this project are:<p>
@@ -177,7 +174,7 @@
 		    </div>
 		</div>
 		
-	<div class="col-lg-1">
+	<div class="col-md-1">
 		<div class="fixed">
 			<h5>Estimated Age Range:<input type="text" id="age-range" value="" size=33></h5>
 		</div>
@@ -225,7 +222,7 @@
 				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<p><b>Fusion of all three bones at the acetabulum</b></p>
+			<br><br><p><b>Fusion of all three bones at the acetabulum</b></p>
 			
 				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 14 years';">
 
@@ -236,7 +233,7 @@
 				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<p><b>Fusion of anterior inferior iliac spine</b></p>
+			<br><br><p><b>Fusion of anterior inferior iliac spine</b></p>
 			
 				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 14 years';">
 
@@ -247,7 +244,7 @@
 				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<p><b>Fusion of iliac crest</b></p>
+			<br><br><p><b>Fusion of iliac crest</b></p>
 			
 				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 12-14 years';">
 
@@ -287,18 +284,18 @@
 	
 	<div class="col-lg-3">
 		<div class="estimate">
-			<p><b>Fusion of sacrac elements (within a single segment)</b></p>
+			<p><b>Fusion of sacral elements (within a single segment)</b></p>
 			
 				<br><input type="button" value="All unfused" onclick="document.getElementById('age-range').value='Less than 2 years';">
 
 				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2-6 years';">
 
-				<br><br><input type="button" value="Complete fusion (with 5 segments)" onclick="document.getElementById('age-range').value='Older than 6 years';">
+				<br><br><input type="button" value="Complete fusion (w/ 5 segments)" onclick="document.getElementById('age-range').value='Older than 6 years';">
 			
 				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<p><b>Fusion of sacrac segments</b></p>
+			<br><br><p><b>Fusion of sacrac segments</b></p>
 			
 				<br><input type="button" value="All 5 unfused" onclick="document.getElementById('age-range').value='Between 6 and 11 years';">
 
