--- a/references.html
+++ b/references.html
@@ -94,9 +94,56 @@
 <section class="references">
   
   <div class="col-lg-6">
+	<p>Albert, A.M. and Maples, W.R. (1995). Stages of epiphyseal union for thoracic and lumbar vertebral centra as a method of age determination for teenage and young adult skeletons. Journal of Forensic Sciences 40: 623–633.</p>
+	<p>Anderson, M., Green, W.T. and Messner, M.B. (1963). Growth and the predictions of growth in the lower extremities. Journal of Bone and Joint Surgery 45A: 1–14.</p>
+	<p>Anderson, M., Messner, M.B. and Green, W.T. (1964). Distribution of lengths of the normal femur and tibia from one to eighteen years of age. Journal of Bone and Joint Surgery 46A: 1197–1202.</p>
+	<p>Ashley, G.T. (1954). The morphological and pathologi¬cal significance of synostosis at the manubrio-sternal joint. Thorax 9: 159–166.</p>
+	<p>Ashley, G.T. (1956). The relationship between the pat¬tern of ossification and the definitive shape of the meso¬sternum in man. Journal of Anatomy 90: 87–105.</p>
+	<p>Birkner R. (1978). Normal Radiographic Patterns and Vari¬ances of the Human Skeleton – an X-ray Atlas of Adults and Children. Baltimore, Munich: Urban and Schwarzenberg.</p>
+	<p>Brodeur, A.E., Silberstein, M.J. and Graviss, E.R. (1981). Radiology of the Pediatric Elbow. Boston, MA: G.K. Hall.</p>
+	<p>Caffey, J. and Madell, S.H. (1956). Ossification of the pubic bones at birth. Radiology 67: 346–350.</p>
+	<p>Cardoso, H.F. (2008). Age estimation of adolescent and young adult male and female skeletons II, epiphyseal union at the upper limb and scapular girdle in a mod¬ern portuguese skeletal sample. American Journal of Phys¬ical Anthropology 137: 97–105.</p>
+	<p>Cardoso, H.F. (2010). The chronology of epiphyseal union in the hand and foot from dry bone observations. International Journal of Osteoarchaeology 20: 737–746.</p>
+	<p>Cardoso, H., Campanacho, V., Gomes, J. and Marinho, L. (2013). Timing of fusion of the ischiopubic ramus from dry bone observations. HOMO-Journal of Compara¬tive Human Biology 64: 454–462.</p>
+	<p>Doherty, B.J. and Heggeness, M.H. (1994). The quanti¬tative anatomy of the atlas. Spine 19: 2497–2500.</p>
+	<p>Elgenmark, O. (1946). The normal development of the ossific centres during infancy and childhood. Acta Pedi¬atrica Scandinavica 33(Suppl. 1).</p>
+	<p>Fawcett, E. (1907). On the completion of ossifica¬tion of the human sacrum. Anatomischer Anzeiger 30: 414–421.</p>
+	<p>Flecker, H. (1942). Time of appearance and fusion of ossification centres as observed by roentgenographic methods. American Journal of Roentgenology 47: 97–159.</p>
+	<p>Gardner, E. and Gray, D.J. (1970). The prenatal devel¬opment of the human femur. American Journal of Anat¬omy 129: 121–140.</p>
+	<p>Greulich, W.W. and Pyle, S.I. (1959). Radiographic Atlas of Skeletal Development of the Hand and Wrist. Stanford: Stanford University Press.</p>
+	<p>Hansman, C.E. (1962). Appearance and fusion of ossifi¬cation centres in the human skeleton. American Journal of Roentgenology 88: 476–482.</p>
+	<p>Jenkins, F.A. (1969). The evolution and development of the dens of the mammalian axis. Anatomical Record 164: 173–184.</p>
+	<p>Love, S.M., Ganey, T. and Ogden, J.A. (1990). Postnatal epiphyseal development: the distal tibia and fibula. Jour¬nal of Pediatric Orthopaedics 10: 298–305.</p>
+	<p>MacLaughlin, S.M. (1990a). Epiphyseal fusion at the sternal end of the clavicle in a modern Portuguese skel¬etal sample. Antropologia Portuguesa 8: 59–68.</p>
+	<p>Maclean, S.J., Black, S.M. and Cunningham, C.A. (2014). The developing juvenile ischium: macro‐radio¬graphic insights. Clinical Anatomy 27: 906–914.</p>
+	<p>McCarthy, S.M. and Ogden, J.A. (1982a). Radiology of postnatal skeletal development. V Distal humerus. Skel¬etal Radiology 7: 239–249.</p>
+
   </div>
        
 <div class="col-lg-6">
+	<p>McCarthy, S.M. and Ogden, J.A. (1982b). Radiology of postnatal development. VI. Elbow joint. Skeletal Radiol¬ogy 9: 17–26.</p>
+	<p>McKern, T.W. and Stewart, T.D. (1957). Skeletal Age Changes in Young American Males, Analysed from the Stand¬point of Age Identification Technical Report EP-45. Natick, MA: Headquarters Quartermaster Research and Devel¬opment Command.</p>
+	<p>Milgram, J.W. and Lyne, E.D. (1975). Epiphysiolysis of the proximal femur in very young children. Clinical Orthopaedics and Related Research 110: 146–153.</p>
+	<p>Moss, M.L. and Noback, C.R. (1958). A longitudinal study of digital epiphyseal fusion in adolescence. Ana¬tomical Record 131: 19–32.</p>
+	<p>Noback, C.R., Moss, M.L. and Leszczynska, E. (1960). Digital epiphyseal fusion of the hand in adolescence: a longitudinal study. American Journal of Physical Anthropol¬ogy 18: 13–16.</p>
+	<p>Ogden, J.A., Beali, J.K., Conlogue, G.J. and Light, T.R. (1981). Radiology of postnatal development. IV. Distal radius and ulna. Skeletal Radiology 6: 255–266.</p>
+	<p>Ogden, J.A. and Phillips, S.B. (1983). Radiology of post¬natal skeletal development. VII. The scapula. Skeletal Radiology 9: 157–169.</p>
+	<p>O’Rahilly, R., Gardner, E. and Gray, D.J. (1959). The skeletal development of the hand. Clinical Orthopedics and Related Research 13: 42–51.</p>
+	<p>Osborne, D.R., Effmann, E.L., Broda, K. and Harrelson, J. (1980). Development of the upper end of the femur with special reference to its internal architecture. Radi¬ology 137: 71–76.</p>
+	<p>Patcas, R., Signorelli, L., Peltomaki, T. and Schatzle, M. (2013). Is the use of the cervical vertebrae maturation method justified to determine skeletal age? A compari¬son of radiation dose of two strategies for skeletal age estimation. European Journal of Orthodontics 35: 604–609.</p>
+	<p>Piatt, J.H., Jr. and Grissom, L.E. (2011). Developmental anatomy of the atlas and axis in childhood by computed tomography: clinical article. Journal of Neurosurgery Pedi¬atrics 8: 235–243.</p>
+	<p>Prakash, S., Chopra, S.R.K. and Jit, I. (1979). Ossifica¬tion of the human patella. Journal of the Anatomical Soci¬ety of India 28: 78–83.</p>
+	<p>Ríos, L. and Cardoso, H.F.V. (2009). Age estimation from stages of union of the vertebral epiphyses of the ribs. American Journal of Physical Anthropology 140: 265–274.</p>
+	<p>Scheuer, J.L. and MacLaughlin-Black, S.M. (1994). Age estimation from the pars basilaris of the fetal and juvenile occipital bone. International Journal of Osteoar¬chaeology 4: 377–380.</p>
+	<p>Scranton, P.E., McMaster, J.H. and Kelly, E. (1976). Dynamic fibular function. A new concept. Clinical Ortho¬pedics and Related Research 118: 76–81.</p>
+	<p>Shapiro, R. and Robinson, F. (1976). Anomalies of the cranio-vertebral border. American Journal of Roentgenol¬ogy 126: 1063–1068.</p>
+	<p>Shirley, N.R. and Jantz, R.L. (2011). Spheno-occipital synchondrosis fusion in modern Americans. Journal of Forensic Sciences 56: 580–585.</p>
+	<p>Stevenson, P.H. (1924). Age order of epiphyseal union in man. American Journal of Physical Anthropology 7: 53–93.</p>
+	<p>Tillmann, B. and Lorenz, R. (1978). The stress at the human atlanto-occipital joint. Anatomy and Embryology 153: 269–277.</p>
+	<p>Torgersen, J. (1950). A roentgenological study of the metopic suture. Acta Radiologica 33: 1–11.</p>
+	<p>Walker, G.E. and Kowalski, C.J. (1972). On the growth of the mandible. American Journal of Physical Anthropology 36: 111–118.</p>
+	<p>Weaver, D.S. (1979). Application of the likelihood ratio test to age estimation using the infant and child tem¬poral bone. American Journal of Physical Anthropology 50: 263–270.</p>
+
   </div>
   
 </section>
