--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,165 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+
+    <title>J-Skel: Skull</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/portfolio-item.css" rel="stylesheet">
+	 <link rel="stylesheet" type="text/css" href="main.css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+	<style>
+		path:hover { 
+			fill: #979797;
+			transform:scale (1.2); 
+			}
+	</style>
+</head>
+
+<body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">Home</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+			
+			  <li class = "dropdown">
+          		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Elements <span class="caret"></span></a>
+         			 <ul class="dropdown-menu">
+            			<li><a href="skull.html">Skull</a></li>
+            			<li><a href="upper_limbs.html">Upper Limbs</a></li>
+            			<li><a href="thorax.html">Thorax</a></li>
+            			<li><a href="pelvic_girdle.html">Pelvic Girdle</a></li>
+            			<li><a href="lower_limbs.html">Lower Limbs</a></li>
+         			 </ul>
+        			</li>
+                    <li>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="references.html">References</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container">
+
+        <!-- Portfolio Item Heading -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">About me
+                </h1>
+            </div>
+        </div>
+        <!-- /.row -->
+<section class="container">
+  <div class="lg-col-6">
+  <img src="img/badasses (2).png">
+  </div>
+  <div class="lg-col-3">
+    <p>My name is Jack Biggs and I'm a graduate student in the Department of Anthropology at Michigan State Univeristy in East Lansing, Michigan focusing on bioarchaeology of the ancient Maya.  My personal research is on skeletal groawth and development and how cultural mechanisms impacted the way subadults grewup.<p>
+    <p>This project has been created with the support of the <a href="http://chi.anthropology.msu.edu/">Cultural Heritage Informatics Fellowship</a> and <a href="http://matrix.msu.edu/">Matrix Center for Digital Humanities and Social Sciences</a>.</p>
+  </div>
+      </section>
+       
+   
+           
+        <!-- /.row -->
+
+        <!-- Related Projects Row -->
+        <div class="row">
+
+            <div class="col-lg-12">
+                <h3 class="page-header">Jump to another region</h3>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="thorax.html">
+                    <img class="img-responsive portfolio-item" src="img/j-skel thorax.png" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="upper_limbs.html">
+                    <img class="img-responsive portfolio-item" src="img/j-skel arm.png" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="pelvic_girdle.html">
+                    <img class="img-responsive portfolio-item" src="img/j-skel pelvis.png" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="lower_limbs.html">
+                    <img class="img-responsive portfolio-item" src="img/j-skel leg.png" alt="">
+                </a>
+            </div>
+
+        </div>
+        <!-- /.row -->
+
+        <hr>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; J-Skel 2017</p>
+                </div>
+            </div>
+            <!-- /.row -->
+        </footer>
+
+    </div>
+    <!-- /.container -->
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+</body>
+
+</html>
