--- a/skull.html
+++ b/skull.html
@@ -235,7 +235,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h2><a name="frontal1">The Frontal</a></h2>
-		<p>In adults and later juvenility, the frontal is one single midline bone. During prenatal growth, the frontal ossifies and develops as two halves separated by the metopic suture. Studies have shown (CITATIONS) that the metopic sutures normally fuses to create one single frontal bone between the ages of 2 and 4 years.</p>
+		<p>In adults and later juvenility, the frontal is one single midline bone. During prenatal growth, the frontal ossifies and develops as two halves separated by the metopic suture. Studies have shown (Togersen 1950) that the metopic sutures normally fuses to create one single frontal bone between the ages of 2 and 4 years.</p>
 		</div>
 	</div>
 	
@@ -267,7 +267,7 @@
 		<div class="description">
 		<h2><a name="temporal1">The Temporal</a></h2>
 		<p>The components and ossification of the temporal bone are very complex so only two major centers will be addressed here.  At birth, the temporal bone is generally separated into two main ossification centers: the pars squama/temporal squama and the pars petrosa (the petrous portions in adults).</p>
-		<p>The temporal squama and pars petrosa usually fuse together to form one single temporal bone within the first year of life (CITATION).</p>
+		<p>The temporal squama and pars petrosa usually fuse together to form one single temporal bone within the first year of life (Weaver 1979).</p>
 		</div>
 	</div>
 	
@@ -297,9 +297,9 @@
 		<div class="description">
 		<h2><a name="occipital1">The Occipital</a></h2>
 		<p>The occipital bone is made up of multiple ossification centers that appear in utero. Postnatal fusion of these ossification centers to each other are not all concurrent, but occur in a specific order and on a known schedule. Around birth, the occipital is usually split into four major components: pars squama (1), pars lateralis (2), and pars basilaris (1).</p>
-		<p>The pars squama is made up of separate ossification centers that begin to fuse in utero. At birth, fusion is not usually complete and the remnant of the sutura mendosa is present. The sutura mendosa runs infero-laterally and usually disappears by the end of the first year after birth (CITATIONS).</p>
-		<p>The pars laterales are the bilateral ossification centers that house the occipital condyles as well as make up the majority of the border of the foramen magnum. Fusion to the pars squama occurs first and takes place between the first and third years (CITATIONS).</p>
-		<p>The pars basilaris makes up the base of the occipital in adults. On the posterior aspect, fusion of the pars basilaris to the pars lateralis takes places between years 5 and 7 (CITATIONS). The anterior surface later fuses to the sphenoid at the spheno-occipital synchondrosis. Fusion of these surfaces tends to be highly variable and even different between the sexes. Fusion of the spheno-occipital synchorosis in females takes places between 11 and 16 years (CITATIONS) while in males, fusion occurs between 13 and 18 years (CITATIONS). As a result, relying on this single fusion center for age-at-death estimations is not entirely accurate but can be used to corroborate the age estimation based on other areas.</p>
+		<p>The pars squama is made up of separate ossification centers that begin to fuse in utero. At birth, fusion is not usually complete and the remnant of the sutura mendosa is present. The sutura mendosa runs infero-laterally and usually disappears by the end of the first year after birth (Scheuer and MacLaughlin-Black 1994).</p>
+		<p>The pars laterales are the bilateral ossification centers that house the occipital condyles as well as make up the majority of the border of the foramen magnum. Fusion to the pars squama occurs first and takes place between the first and third years (Scheuer and MacLaughlin-Black 1994; Shapiro and Robinson 1976).).</p>
+		<p>The pars basilaris makes up the base of the occipital in adults. On the posterior aspect, fusion of the pars basilaris to the pars lateralis takes places between years 5 and 7 (Scheuer and MacLaughlin Black 1994; Tillmann and Lorenz 1978). The anterior surface later fuses to the sphenoid at the spheno-occipital synchondrosis. Fusion of these surfaces tends to be highly variable and even different between the sexes. Fusion of the spheno-occipital synchorosis in females takes places between 11 and 16 years (Shirley and Jantz 2011) while in males, fusion occurs between 13 and 18 years (CITATIONS). As a result, relying on this single fusion center for age-at-death estimations is not entirely accurate but can be used to corroborate the age estimation based on other areas.</p>
 		</div>
 	</div>
 	
@@ -353,9 +353,9 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h2><a name="sphenoid1">The Sphenoid</a></h2>
-			<p>The sphenoid is another bone with multiple ossification centers that appear in fetal life, yet fusion of some of these occurs before birth (CITATIONS).</p>
-			<p>By birth, three centers are normally present: (1) the body and lesser wings and (2) a right and a left greater wing fused to the pterygoid plates (CITATIONS).  Even though these separate ossification centers are highly complex in form and function, they are all normally fused together during the first year of life.</p>
-			<p>The spenoid also contributes to the spheno-occipital synchondrosis. This surface fuses with the basilar portion of the occipital bone.  Fusion of these two surfaces occurs within a wide time-frame and can also be contigent upon the sex of the individual.  Generally, these fuse earlier in females (between 11 and 16 years of age) than in males (between 13 and 18 years of age), but this is variable (CITATIONS).</p>
+			<p>The sphenoid is another bone with multiple ossification centers that appear in fetal life, yet fusion of some of these occurs before birth (Kier and Rothman 1976).</p>
+			<p>By birth, three centers are normally present: (1) the body and lesser wings and (2) a right and a left greater wing fused to the pterygoid plates (Kier and Rothman 1976).  Even though these separate ossification centers are highly complex in form and function, they are all normally fused together during the first year of life.</p>
+			<p>The spenoid also contributes to the spheno-occipital synchondrosis. This surface fuses with the basilar portion of the occipital bone.  Fusion of these two surfaces occurs within a wide time-frame and can also be contigent upon the sex of the individual.  Generally, these fuse earlier in females (between 11 and 16 years of age) than in males (between 13 and 18 years of age), but this is variable (Scheur and Black 2004).</p>
 			
 		</div>
 	</div>
@@ -395,7 +395,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h2><a name="mandible1">The Mandible</a></h2>
-		<p>Similar to the frontal bone, the mandible originates as two separate ossification centers that fuse to become one single bone.  This fusion occurs at midline (bisecting the mental eminence) at the mandibular symphysis.  The fusion of the two mandibular halves takes place within the first year of life meaning that if infant remains present two mandibular halves, the individual died within the first year of life.</p>
+		<p>Similar to the frontal bone, the mandible originates as two separate ossification centers that fuse to become one single bone.  This fusion occurs at midline (bisecting the mental eminence) at the mandibular symphysis.  The fusion of the two mandibular halves takes place within the first year of life meaning that if infant remains present two mandibular halves, the individual died within the first year of life (Walker and Kowalski 1972).</p>
 		</div>
 	</div>
 	
@@ -416,8 +416,8 @@
 <br><br>	    
 	    
 <section class="container"> 
-	<div class="col-lg-4"> 
-		<p>Pictures of dentition</p>
+	<div class="col-lg-6"> 
+		<img src="img/dentition 1.png" alt="Mixed dentition" style="width:100%; height:100%;">
         </div>
             
 	<div class="col-lg-3">
