--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
         <!-- /.row -->
 <section class="container">
   <div class="lg-col-6">
-  <img src="img/badasses (2).png">
+  <img src="img/Badasses (2).png">
   </div>
   <div class="lg-col-3">
     <p>My name is Jack Biggs and I'm a graduate student in the Department of Anthropology at Michigan State Univeristy in East Lansing, Michigan focusing on bioarchaeology of the ancient Maya.  My personal research is on skeletal groawth and development and how cultural mechanisms impacted the way subadults grewup.<p>
@@ -109,9 +109,14 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h3 class="page-header">Jump to another region</h3>
+                <h3 class="page-header">Jump to region</h3>
             </div>
-
+		<div class="col-sm-3 col-xs-6">
+                <a href="skull.html">
+                    <img class="img-responsive portfolio-item" src="img/j-skel skulls.png" alt="">
+                </a>
+            </div>
+		
             <div class="col-sm-3 col-xs-6">
                 <a href="thorax.html">
                     <img class="img-responsive portfolio-item" src="img/j-skel thorax.png" alt="">
