--- a/skull.html
+++ b/skull.html
@@ -420,25 +420,13 @@
 		<img src="img/dentition 1.png" alt="Mixed dentition" style="width:100%; height:100%;">
         </div>
             
-	<div class="col-lg-3">
+	<div class="col-lg-6">
 		<div class="description">
 		<h2><a name="dentition1">Dental Eruption &amp; Tooth Development</a></h2>
-		<p>Similar to the frontal bone, the mandible originates as two separate ossification centers that fuse to become one single bone.  This fusion occurs at midline (bisecting the mental eminence) at the mandibular symphyseal surface, or the symphysis of the mandible.  The fusion of the two mandibular halves takes place within the first year of life meaning that if infant remains present two mandibular halves, the individual died within the first year of life.</p>
-		</div>
-	</div>
-	
-	<div class="col-lg-3">
-		<div class="estimate">
-			<p><b>Dentition age range stuff</b></p>
-			
-			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
-
-			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2 - 4 years of age';">
-
-			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 4 years of age';">
-			
-			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
-			<br>
+	<	p>It has been proven that teeth are less likely to be affected by extrinsic forces during development compared to the skeleton.  Skeletal elements are much more plastic and can have adverse effects as a result of malnutrition, disease, or any prolonged stress event.  These events can cause stunting and delayed development, yet teeth seem to be under tighter genetic control, allowing them to develop and erupt on a regular schedule, despite what may be happening with the rest of the body.</p>
+		<p>As a result, using dentition is one of the most accurate methods for estimating the ages of subadults.  This can be accomplished in two different ways: tooth formation and dental eruption.  Tooth formation tracks the development of teeth as they are formed from crown to root.  The rates are relatively well known and can help track down age estimates.  </p>
+		<p>Dental eruption is also a strong technique, and one of the most widely used methods in the world.  Both deciduous and permanent teeth erupt from your gums in a very specific and known order, as well as on a fairly understood schedule.  Ages of subadults can even be estimated down the less than a year based on population-specific dental eruption charts.</p>
+		<p>Though they are not without their faults, these are great methods for age estimation.  Due to their complex nature, these methods cannot be described here as it would not do them justice.  For more information and resources on dental development and eruption, please visit……….. </p>
 		</div>
 	</div>
 </section>	    
