--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
         <!-- /.row -->
 <section class="container">
   <div class="lg-col-6">
-  <img src="img/Badasses (2).png">
+  <img src="img/Badasses (2).png" style="width:50%; height:50%;">
   </div>
   <div class="lg-col-3">
     <p>My name is Jack Biggs and I'm a graduate student in the Department of Anthropology at Michigan State Univeristy in East Lansing, Michigan focusing on bioarchaeology of the ancient Maya.  My personal research is on skeletal groawth and development and how cultural mechanisms impacted the way subadults grewup.<p>
