--- a/contact.html
+++ b/contact.html
@@ -92,10 +92,10 @@
         </div>
         <!-- /.row -->
 <section class="container">
-  <div class="lg-col-6">
-  <img src="img/Badasses (2).png" style="width:50%; height:50%;">
+  <div class="col-lg-6">
+  <img src="img/Badasses (2).png" style="width:35%; height:35%;">
   </div>
-  <div class="lg-col-3">
+  <div class="col-lg-3">
     <p>My name is Jack Biggs and I'm a graduate student in the Department of Anthropology at Michigan State Univeristy in East Lansing, Michigan focusing on bioarchaeology of the ancient Maya.  My personal research is on skeletal groawth and development and how cultural mechanisms impacted the way subadults grewup.<p>
     <p>This project has been created with the support of the <a href="http://chi.anthropology.msu.edu/">Cultural Heritage Informatics Fellowship</a> and <a href="http://matrix.msu.edu/">Matrix Center for Digital Humanities and Social Sciences</a>.</p>
   </div>
