--- a/index.html
+++ b/index.html
@@ -67,9 +67,6 @@
          			 </ul>
         			</li>
                     <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li>
                         <a href="references.html">References</a>
                     </li>
                     <li>
@@ -1990,7 +1987,7 @@
             </div>
 
             <div class="col-lg-6"> 
-		    <div class="description">
+		    <div class="intro">
                 <h3>Project Description</h3>
 			<p>Welcome to J-Skel, the digital juvenile skeletal age estimator. This project is aimed at acquainting students of physical anthropology and human osteology with a few of the different methods used to estimate the age-at-death of human subadult skeletal remains.</p>
 			<p>Due to their complex growth and development, subadult remains are rarely addressed in introductory osteology courses and even infrequently studied in advanced classes as well.  As a result, some osteologists and physical anthropologists are relatively unfamiliar with subadult osteology when remains are encountered in the field or lab.  However, it is their complex development that allows to more accurately estimate the age of subadult remains compared to those of an adult.  For this project, epiphyseal fusion will be the main aging technique, but will also touch upon tooth formation and eruption and eruption as well as the appearance of ossification centers.</p>
