--- a/references.html
+++ b/references.html
@@ -151,28 +151,35 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h3 class="page-header">Jump to another region</h3>
+                <h3 class="page-header">Jump to a region</h3>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+	<div class="col-sm-3 col-xs-6">
+                <a href="skull.html">
+                    <img class="img-responsive portfolio-item" src="img/j-skel skulls.png" alt="">
+                </a>
+            </div>
+	
+		
+            <div class="col-sm-2 col-xs-6">
                 <a href="thorax.html">
                     <img class="img-responsive portfolio-item" src="img/j-skel thorax.png" alt="">
                 </a>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-sm-2 col-xs-6">
                 <a href="upper_limbs.html">
                     <img class="img-responsive portfolio-item" src="img/j-skel arm.png" alt="">
                 </a>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-sm-2 col-xs-6">
                 <a href="pelvic_girdle.html">
                     <img class="img-responsive portfolio-item" src="img/j-skel pelvis.png" alt="">
                 </a>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-sm-2 col-xs-6">
                 <a href="lower_limbs.html">
                     <img class="img-responsive portfolio-item" src="img/j-skel leg.png" alt="">
                 </a>
