--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -215,7 +215,10 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h2><a name="femur1">Femur</a></h2>
-		<p>Femur DESCRIPTION.</p>
+		<p>Unlike many other bones, the femur is represented by both the diaphysis and the distal epiphysis at birth (Gardner and Gray 1970).  Within the first year of life, the ossification center for the femoral head appears while between 2 and 5 years, the ossification center for the greater trochanter commences (Milgram and Lyne 1975).  It is not until 7 to 12 years of age when the ossification center for the lesser trochanter appears. </p>
+		<p>Fusion times of the femur are variable and somewhat sex-specific.  The femoral head fuses between 12 and 16 years old in females and between 14 and 19 years in males.  The same pattern goes for the greater trochanter: 14-16 females; 16-18 males (Milgram and Lyne 1975; Scheuer and Black 2004).  The lesser trochanter appears to fuse evenly between males and females from 16 to 17 years old.</p>
+		<p>The last epiphyses to fuse are the distal epiphyses.  Again, there appear to be sex-related differences: 14-18 in females; 16-20 in males .</p>
+
 		</div>
 	</div>
 	
@@ -223,31 +226,41 @@
 		<div class="estimate">
 			<p><b>Femoral head</b></p>
 			
-				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
+				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 12 years of age';">
 
-				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2 - 4 years of age';">
+				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='12-16 years (F);14-19 years (M)';">
 
-				<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 4 years of age';">
+				<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 16 (F) or 19 (M) years';">
 			
 				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
-			<p><b>Greater trochanter</b></p>
+			<br><br><p><b>Greater trochanter</b></p>
 			
-				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
+				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 14 years of age';">
 
-				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2 - 4 years of age';">
+				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='14-16 years(F); 16-18 years (M)';">
 
-				<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 4 years of age';">
+				<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 18 (F) or 19(M)';">
 			
 				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
-			<p><b>Distal epiphysis - condyles</b></p>
+			<br><br><p><b>Lesser trochanter</b></p>
 			
-				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
+				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 16 years';">
 
-				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2 - 4 years of age';">
+				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='16-17 years (M)';">
 
-				<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 4 years of age';">
+				<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 17 years';">
+			
+				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
+			<br>
+			<br><br><p><b>Distal epiphysis - condyles</b></p>
+			
+				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 14 (F)or 16 (M)';">
+
+				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='14-18 (F) or 16-20 (M) - 4 years of age';">
+
+				<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 20y';">
 			
 				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
